--- a/FCC - TRIBUTE PAGE/src/style.css
+++ b/FCC - TRIBUTE PAGE/src/style.css
@@ -8,7 +8,7 @@ body {
 
 h1 {
   font-family: 'Abril Fatface', cursive;  
-  font-size: 50px;
+  font-size: 35px;
   color: white;
   text-align:center;
   background: linear-gradient(120deg, rgba(14,21,72,1) 0%, rgba(32,118,26,1) 100%);
@@ -18,6 +18,7 @@ h1 {
 
 #image {
   max-width: 100%;
+  min-width: 50%;
   height: auto;
   display: block;
   margin-left:auto;
@@ -36,7 +37,7 @@ h1 {
 }
 
 #tribute-info {
-  width: 700px;
+  width: 80%;
   text-align:center;
   margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
@@ -44,7 +45,7 @@ h1 {
 
 a {
   color: #FFF;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: bold;
   text-decoration: none;
   border: 2px solid #FFF;
@@ -54,8 +55,7 @@ a {
 }
 
 .center {
-  margin: 80px auto 40px;
-  width: 60%;
+  margin: 40px auto 40px;
   text-align:center;
 }
 
