--- a/FCC - TRIBUTE PAGE/src/style.css
+++ b/FCC - TRIBUTE PAGE/src/style.css
@@ -1,39 +1,60 @@
 body {
-  font-family: Monospace;
-  color: rgba(144,255,135,1);
-  font-size: 24px;
-  background: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(37,78,21,1) 100%);
+ font-family: 'Laila', sans-serif;
+  color: white;
+  font-size: 26px;
+  background-image: linear-gradient(120deg, rgba(2,0,36,0.7), rgba(37,78,21,1)), url("https://images.unsplash.com/photo-1548538136-1240693e37f3?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=659&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;  
   padding: 10px;
- }
+}
+
+hr {
+  border: 2px dashed white;
+}
 
 h1 {
-  font-family: 'Abril Fatface', cursive;  
-  font-size: 35px;
+  font-family: 'Black Ops One', cursive;  
+  font-size: 37px;
   color: white;
   text-align:center;
   background: linear-gradient(120deg, rgba(14,21,72,1) 0%, rgba(32,118,26,1) 100%);
   padding: 30px;
-  border-radius: 10px;
+  border-radius: 20px;
+  border: 4px solid rgba(15,184,5,1);
 }
 
 #image {
   max-width: 100%;
-  min-width: 50%;
+  min-width: 60%;
   height: auto;
   display: block;
   margin-left:auto;
   margin-right:auto; 
-  border: 2px solid #fff;
+  border: 4px solid white;
   border-radius: 20px;
+}
+#chris-box{
+  display:flex;
+    align-items: center;
+  justify-content: center;
+}
+
+#media-btns{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 10px;
 }
 
 #img-caption {
   width: 400px;
-  font-size: 17px;
+  font-size: 20px;
   text-align:center;
   margin:20px auto;
   color: #fff;
   font-weight: bold;
+    font-family: Monospace;
 }
 
 #tribute-info {
@@ -45,17 +66,18 @@ h1 {
 
 a {
   color: #FFF;
-  font-size: 15px;
+  font-size: 21px;
   font-weight: bold;
+    font-family: Monospace;
   text-decoration: none;
-  border: 1px solid #FFF;
-  border-radius: 8px;
-  background: linear-gradient(120deg, rgba(14,21,72,1) 0%, rgba(32,118,26,1) 100%);
+  border:6px solid;
+  border-image: 
+linear-gradient(90deg, rgba(36,91,117,1), rgba(15,184,5,1)) 1;
   padding: 15px;
 }
 
 a:hover {
-    font-size: 70%;
+  border: 5px solid #FFF;
 }
 
 .center {
@@ -63,5 +85,9 @@ a:hover {
   text-align:center;
 }
 
+@media (max-width: 700px){
+  #chris-box{
+    flex-direction: column;}
 
+}
 
